// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextArea Default 1`] = `
<div
  className="sc-jnlKLf apVHT"
  disabled={false}
>
  <textarea
    className="sc-fYxtnH jhoHNc"
    disabled={false}
    id={undefined}
    name="description"
    onChange={[Function]}
    rows={3}
    value=""
  />
</div>
`;

exports[`Storyshots TextArea With Feedback 1`] = `
Array [
  <div
    className="sc-jnlKLf dmuqIl"
    disabled={false}
  >
    <textarea
      className="sc-fYxtnH jhoHNc"
      disabled={false}
      id={undefined}
      name="description"
      onChange={[Function]}
      rows={3}
      value=""
    />
  </div>,
  <div
    className="sc-bwzfXH enAvAo"
  >
    <p
      className="sc-bxivhb gWsGB"
    >
      <span
        className="sc-htpNat dHjTEh"
      >
        <span
          className="sc-htpNat fyOzxh"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat dHjTEh"
        >
          This is a feedback message
        </span>
      </span>
    </p>
  </div>,
]
`;
